# project-2-Tonkushin-M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
data/: users.json
docs/: demo.cast
src/primitive_db/: constants.py  core.py  db_meta.json  decorators.py  engine.py  main.py  parser.py  utils.py
