[project]
name = "project-2-tonkushin-m25-555"
version = "0.1.0"
description = ""
authors = [
    { name = "Dmitriy Tonkushin", email = "dmitriy.tonkushin@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.16.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" },
]

[tool.poetry.scripts]
database = "primitive_db.main:main"
project = "primitive_db.main:main"

[tool.primitive_db]
# Путь к файлу метаданных (db_meta.json)
metadata_path = "src/primitive_db/db_meta.json"
# Путь к директории с данными таблиц
data_dir = "data"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)"
]
